Bug 170728 - kontact freezes when trying to modify sending smtp account (trying to use not-installed kwallet)
Summary: kontact freezes when trying to modify sending smtp account (trying to use not...
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: mailtransport (other bugs)
Version First Reported In: 4.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Tom Albers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-09 11:29 UTC by Oliver Putz
Modified: 2009-01-04 16:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Putz 2008-09-09 11:29:40 UTC
Version:           1.10.1 (using 4.1.1 (KDE 4.1.1), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.25-gentoo-r7

Steps to reproduce

1) Open kontact
2) Go to Settings->Configure Kmail->Accounts->Sending
3) Select an account and hit "modify"

Note: This only happens with an "old" (KDE-4.0 times) SMTP Account. If I create a new Account, I can normally modify all the data.

Starting Kontact from konsole and executing the above steps prints infinitely many "The kwalletd service has been disabled" messages. Even though kwallet is not installed, I think this dialog should not freeze if kwallet is not available. 

As the account is quite old, is it possible that kmail once stored some pasword in the wallet and now wants to retrieve it but cannot accept that it is no longer there?
Comment 1 Thomas McGuire 2009-01-04 15:43:08 UTC
Confirmed, I'm looking at it.
Comment 2 Thomas McGuire 2009-01-04 16:13:16 UTC
SVN commit 905534 by tmcguire:

Update the password of the cloned transport of the config dialog if the 
transport manager has loaded the password, otherwise we go into an infinite
password-loading loop in certain situations.

BUG: 170728


 M  +16 -0     transport.cpp  
 M  +13 -0     transport.h  
 M  +3 -0      transportconfigdialog.cpp  
 M  +2 -0      transportmanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=905534
Comment 3 Thomas McGuire 2009-01-04 16:26:37 UTC
SVN commit 905542 by tmcguire:

Backport r905534 by tmcguire from trunk to the 4.1 branch:

Update the password of the cloned transport of the config dialog if the 
transport manager has loaded the password, otherwise we go into an infinite
password-loading loop in certain situations.

CCBUG: 170728



 M  +16 -0     transport.cpp  
 M  +13 -0     transport.h  
 M  +3 -0      transportconfigdialog.cpp  
 M  +2 -0      transportmanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=905542