Update the password of the cloned transport of the config dialog if the transport manager has loaded the password, otherwise we go into an infinite password-loading loop in certain situations.

BUG: 170728

svn path=/trunk/KDE/kdepimlibs/; revision=905534